package ca.mcmaster.cas.se2aa4.a2.island.tile;

import java.awt.Color;

/**
 * This class stores the colors of the tiles
 */
public class TileColors {
    public static Color OCEAN = new Color(5,64,96);

    public static Color SUBTROPICAL_DESERT = new Color(249,148,24);

    public static Color TROPICAL_SEASONAL_FOREST = new Color(155, 224, 35);

    public static Color ICE_COLOR = new Color(165, 242, 243);

    public static Color REGULAR = new Color(255,255,255);

    public static Color LAND_WATER = new Color(4,100,151);
}
