package ca.mcmaster.cas.se2aa4.a2.island.tile.type;

public enum TileGroup {
    WATER,
    LAND,
    NONE
}
